# HPCSE

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
common/include/common/: AlignedAllocator.h  Common.h  Mpi.h  Timer.h
diffusion/: CMakeLists.txt
diffusion/include/diffusion/: Barrier.h  Diffusion.h  DiffusionJob.h  DiffusionMPI.h  DiffusionParallel.h  DiffusionSequential.h  RandomWalk.h
diffusion/src/: Diffusion.cpp  DiffusionGrid.cpp  DiffusionJob.cpp  DiffusionJob.h  DiffusionMPI.cpp  DiffusionParallel.cpp  DiffusionRows.cpp  DiffusionSequential.cpp  RandomWalk.cpp
exercise1/: CMakeLists.txt  RiemannSum.cpp  RunRiemann.cpp  visualize.py
exercise1/results/: brutus.txt
exercise10/: CMakeLists.txt  RunVortex.cpp  visualize.py
exercise11/: nbody_serial_nocells_skeleton.cpp
exercise12/HPCSE12_ParallelSum/: Makefile  sse.cpp
exercise2/: Barrier.h  BarrierTest.cpp  CMakeLists.txt  Diffusion.h  DiffusionJob.cpp  DiffusionJob.h  DiffusionParallel.cpp  DiffusionParallel.h  DiffusionSequential.cpp  DiffusionSequential.h  RunDiffusion.cpp  plotbenchmark.py  plotdiffusion.py  sweep.py  visualize.py
exercise2/results/: benchmark.txt
exercise3/: CMakeLists.txt  TimeEvolution.cpp  parsebenchmark.py  plotevolution.py  plotomp.py  sweep.py  sweep_omp.py
exercise3/results/: timeevolution.txt
exercise4/: CMakeLists.txt  RunRandomWalk.cpp  plotbenchmark.py  strongscaling.txt  sweep.py  weakscaling.txt
exercise5/: CMakeLists.txt  RunRigidDisks.cpp  histogram.py  sweep.py
exercise6/: CMakeLists.txt  RunDiffusionMPI.cpp  plot_benchmark.py  sweep.py  sweep_large.py
exercise6/results/: diffusion_merged.txt  diffusionmpi_merged.txt
exercise7/: Bandwidth.cpp  CMakeLists.txt  PushForRoof.cpp  drawroofline.py
exercise8/: CMakeLists.txt  RunDiffusionGrid.cpp  plot_benchmark.py
exercise8/results/: gridbenchmarks.txt  sequential.txt
exercise9/: BinomialSquares.cpp  CMakeLists.txt  RunLennardJones.cpp
lennardjones/: CMakeLists.txt
lennardjones/include/lennardjones/: LennardJones.h
lennardjones/src/: LennardJones.cpp  LennardJones.inl
metropolis/: CMakeLists.txt
metropolis/include/metropolis/: RigidDisks.h
metropolis/src/: RigidDisks.cpp
riemann/: CMakeLists.txt
riemann/include/riemann/: RiemannSum.h
riemann/src/: RiemannSum.cpp
vortex/: CMakeLists.txt
vortex/include/vortex/: Vortex.h
vortex/src/: Vortex.cpp
