if (NOT HPCSE_OPENMP_FOUND)
  message(WARNING "Project built without OpenMP. Exercise 3 benchmarks not available.") 
else()
  message(STATUS "Project built with OpenMP support. To benchmark Exercise 3, run the executable of Exercise 2.") 
endif()
add_executable(TimeEvolution ${CMAKE_CURRENT_SOURCE_DIR}/TimeEvolution.cpp)
target_link_libraries(TimeEvolution ${HPCSE_LIBS} diffusion)
